# rustica

./: .gitignore  README.md
docs/: BUILD.md  GUI.md  IMAGE.md  PLAN.md  README.md  WRITE.md
repo/apps/: Cargo.toml  README.md
repo/apps/cli/: build.rs
repo/apps/cli/net-tools/: Cargo.toml
repo/apps/cli/net-tools/src/: main.rs
repo/apps/cli/redit/: Cargo.toml
repo/apps/cli/redit/src/: main.rs
repo/apps/cli/sys-tools/: Cargo.toml
repo/apps/cli/sys-tools/src/: main.rs
repo/apps/examples/file-manager/: Cargo.toml
repo/apps/examples/file-manager/src/: main.rs
repo/apps/examples/hello-world/: Cargo.toml
repo/apps/examples/hello-world/src/: main.rs
repo/apps/gui/aurora-launcher/: Cargo.toml
repo/apps/gui/aurora-launcher/src/: main.rs
repo/apps/gui/aurora-panel/: Cargo.toml
repo/apps/gui/aurora-panel/src/: main.rs
repo/apps/gui/aurora-shell/: Cargo.toml
repo/apps/gui/aurora-shell/src/: main.rs
repo/apps/libs/netlib/: Cargo.toml
repo/apps/libs/netlib/src/: dns.rs  http.rs  lib.rs  protocol.rs
repo/apps/libs/rgui/: Cargo.toml
repo/apps/libs/rgui/src/: lib.rs  render.rs  theme.rs  widget.rs
repo/apps/libs/rutils/: Cargo.toml
repo/apps/libs/rutils/src/: config.rs  lib.rs  path.rs  string.rs  sys.rs
repo/apps/scripts/: build-all.sh  package.sh
repo/apps/tests/: integration.rs
shell/: Cargo.toml  link.ld
shell/.cargo/: config.toml
shell/src/: builtins.rs  main.rs  parser.rs  theme.rs
tools/cli/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  build.rs
tools/cli/scripts/: qemu-validation.sh
tools/cli/src/coreutils/: Cargo.toml
tools/cli/src/coreutils/src/: file_utils.rs  lib.rs  output.rs
tools/cli/src/fwctl/: Cargo.toml
tools/cli/src/fwctl/src/: main.rs
tools/cli/src/init/: Cargo.toml
tools/cli/src/init/src/: main.rs
tools/cli/src/networkutils/: Cargo.toml
tools/cli/src/pkgutil/: Cargo.toml
tools/cli/src/pkgutil/src/: main.rs
tools/cli/src/sh/: Cargo.toml
tools/cli/src/sh/src/: main.rs
tools/cli/src/storageutils/: Cargo.toml
tools/cli/src/svc/: Cargo.toml
tools/cli/src/sysutils/: Cargo.toml
update-system/: Cargo.toml
update-system/rpg/: Cargo.toml
update-system/rpg-core/: Cargo.toml
update-system/rpg-core/src/: archive.rs  config.rs  fetch.rs  layout.rs  lib.rs  ops.rs  package.rs  registry.rs  signature.rs  sources.rs  symlink.rs  transaction.rs  version.rs
update-system/update-daemon/: Cargo.toml
update-system/update-daemon/src/: main.rs
