[package]
name = "rpg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
tempfile.workspace = true
semver.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir.workspace = true
sysinfo.workspace = true
ulid.workspace = true
rand.workspace = true
