[package]
name = "rpg"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rpg"
path = "src/bin/rpg.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
base64.workspace = true
reqwest.workspace = true
tempfile.workspace = true
semver.workspace = true
sysinfo.workspace = true

# Local crates
rpg-core = { path = "../rpg-core" }
