[package]
name = "aurora-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true

# GUI dependencies
egui.workspace = true
winit.workspace = true
softbuffer.workspace = true

# Aurora libraries
rgui = { path = "../../libs/rgui" }
rutils = { path = "../../libs/rutils" }
