[package]
name = "coreutils"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
walkdir.workspace = true
chrono.workspace = true
libc = "0.2"
termion = "3.0"
