[package]
name = "networkutils"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ip"
path = "src/bin/ip.rs"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

[[bin]]
name = "nslookup"
path = "src/bin/nslookup.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
tokio.workspace = true
nix = { version = "0.27", features = ["net", "socket"] }
libc = "0.2"
