[package]
name = "pkgutil"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pkg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
